Getting Metamask to connect to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,17 @@
     <title>PenguinFinance</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover PenguinFinance, the leading DEX on Oasis Ethereum Paratime with the best farms in DeFi and a lottery for PEFI."
+      content="Cheaper and faster than Uniswap? Discover PenguinFinance, the leading DEX on avax Ethereum Paratime with the best farms in DeFi and a lottery for PEFI."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="twitter:image" content="https://penguinfinance.io/hero.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on Oasis by user count! Earn PEFI through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by PenguinFinance), NFTs, and more, on a platform you can trust."
+      content="The most popular AMM on avax by user count! Earn PEFI through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by PenguinFinance), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🥞 PenguinFinance - A next evolution DeFi exchange on Oasis Paratime (Oasis)" />
+    <meta name="twitter:title" content="🥞 PenguinFinance - A next evolution DeFi exchange on avax Paratime (avax)" />
   </head>
   <body>
     <!-- GTAG (noscript) -->
