Adding Front-end code

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:image" content="https://penguinfinance.io/hero.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on avax by user count! Earn PEFI through yield farming or win it in the Lottery, then stake it in Syrup Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by PenguinFinance), NFTs, and more, on a platform you can trust."
+      content="Penguin Finance."
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="🥞 PenguinFinance - A next evolution DeFi exchange on avax Paratime (avax)" />
